--- a/nautobot_device_onboarding/templates/nautobot_device_onboarding/ssot_sync_devices.html
+++ b/nautobot_device_onboarding/templates/nautobot_device_onboarding/ssot_sync_devices.html
@@ -3,7 +3,7 @@
 
 {% block job_form %}
 
-{% render_form job_form excluded_fields="['location', 'namespace', 'ip_addresses', 'device_role', 'device_status', 'interface_status', 'ip_address_status', 'port', 'timeout', 'secrets_group', 'platform', 'set_mgmt_only', 'update_devices_without_primary_ip', 'csv_file']" %}
+{% render_form job_form excluded_fields="['location', 'namespace', 'ip_addresses', 'device_role', 'device_status', 'device_tenant', 'interface_status', 'ip_address_status', 'port', 'timeout', 'secrets_group', 'platform', 'set_mgmt_only', 'update_devices_without_primary_ip', 'csv_file']" %}
 
     {% with csv_tab_active=form.initial.csv_input %}
     <ul class="nav nav-tabs" role="tablist">
@@ -25,6 +25,7 @@
             {% render_field job_form.update_devices_without_primary_ip %}
             {% render_field job_form.device_role %}
             {% render_field job_form.device_status %}
+            {% render_field job_form.device_tenant %}
             {% render_field job_form.interface_status %}
             {% render_field job_form.ip_address_status %}
             {% render_field job_form.secrets_group %}
