--- a/nautobot_device_onboarding/templates/nautobot_device_onboarding/ssot_sync_devices.html
+++ b/nautobot_device_onboarding/templates/nautobot_device_onboarding/ssot_sync_devices.html
@@ -30,6 +30,7 @@
                     {% render_field job_form.ip_address_status %}
                     {% render_field job_form.secrets_group %}
                     {% render_field job_form.platform %}
+                    {% render_field job_form.device_tenant %}
                 </div>
                 <div class="tab-pane fade{% if csv_tab_active %} show active{% endif %}" id="job_csv_input">
                     {% render_field job_form.csv_file %}
@@ -43,7 +44,7 @@
             <strong>Job Data</strong>
         </div>
         <div class="card-body">
-            {% render_form job_form excluded_fields="['location', 'namespace', 'ip_addresses', 'device_role', 'device_status', 'interface_status', 'ip_address_status', 'port', 'timeout', 'secrets_group', 'platform', 'set_mgmt_only', 'update_devices_without_primary_ip', 'csv_file']" %}
+            {% render_form job_form excluded_fields="['location', 'namespace', 'ip_addresses', 'device_role', 'device_status', 'interface_status', 'ip_address_status', 'port', 'timeout', 'secrets_group', 'platform', 'device_tenant', 'set_mgmt_only', 'update_devices_without_primary_ip', 'csv_file']" %}
         </div>
     </div>
 {% endblock job_form_wrapper %}
